pkg/synthesis/tests_expected_output/k8s_resources/ExampleHintsDisjoint_NoHint/policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (group = Dumbledore1 and group != Dumbledore2) dst: (group != Slytherin) conn: All Connections'
        nsx-id: "1927"
    creationTimestamp: null
    name: policy-0
    namespace: default
spec:
    egress:
        - to:
            - podSelector:
                matchExpressions:
                    - key: group__Slytherin
                      operator: DoesNotExist
    podSelector:
        matchExpressions:
            - key: group__Dumbledore1
              operator: Exists
            - key: group__Dumbledore2
              operator: DoesNotExist
    policyTypes:
        - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (group = Dumbledore1) dst: (group != Slytherin and group != Gryffindor) conn: All Connections'
        nsx-id: "1927"
    creationTimestamp: null
    name: policy-1
    namespace: default
spec:
    egress:
        - to:
            - podSelector:
                matchExpressions:
                    - key: group__Slytherin
                      operator: DoesNotExist
                    - key: group__Gryffindor
                      operator: DoesNotExist
    podSelector:
        matchExpressions:
            - key: group__Dumbledore1
              operator: Exists
    policyTypes:
        - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (group = Dumbledore1 and group != Dumbledore2) dst: (group != Slytherin) conn: All Connections'
        nsx-id: "1927"
    creationTimestamp: null
    name: policy-2
    namespace: default
spec:
    ingress:
        - from:
            - podSelector:
                matchExpressions:
                    - key: group__Dumbledore1
                      operator: Exists
                    - key: group__Dumbledore2
                      operator: DoesNotExist
    podSelector:
        matchExpressions:
            - key: group__Slytherin
              operator: DoesNotExist
    policyTypes:
        - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (group = Dumbledore1) dst: (group != Slytherin and group != Gryffindor) conn: All Connections'
        nsx-id: "1927"
    creationTimestamp: null
    name: policy-3
    namespace: default
spec:
    ingress:
        - from:
            - podSelector:
                matchExpressions:
                    - key: group__Dumbledore1
                      operator: Exists
    podSelector:
        matchExpressions:
            - key: group__Slytherin
              operator: DoesNotExist
            - key: group__Gryffindor
              operator: DoesNotExist
    policyTypes:
        - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (group = Dumbledore2 and group != Dumbledore1) dst: (group != Gryffindor) conn: All Connections'
        nsx-id: "1928"
    creationTimestamp: null
    name: policy-4
    namespace: default
spec:
    egress:
        - to:
            - podSelector:
                matchExpressions:
                    - key: group__Gryffindor
                      operator: DoesNotExist
    podSelector:
        matchExpressions:
            - key: group__Dumbledore2
              operator: Exists
            - key: group__Dumbledore1
              operator: DoesNotExist
    policyTypes:
        - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (group = Dumbledore2) dst: (group != Slytherin and group != Gryffindor) conn: All Connections'
        nsx-id: "1928"
    creationTimestamp: null
    name: policy-5
    namespace: default
spec:
    egress:
        - to:
            - podSelector:
                matchExpressions:
                    - key: group__Slytherin
                      operator: DoesNotExist
                    - key: group__Gryffindor
                      operator: DoesNotExist
    podSelector:
        matchExpressions:
            - key: group__Dumbledore2
              operator: Exists
    policyTypes:
        - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (group = Dumbledore2 and group != Dumbledore1) dst: (group != Gryffindor) conn: All Connections'
        nsx-id: "1928"
    creationTimestamp: null
    name: policy-6
    namespace: default
spec:
    ingress:
        - from:
            - podSelector:
                matchExpressions:
                    - key: group__Dumbledore2
                      operator: Exists
                    - key: group__Dumbledore1
                      operator: DoesNotExist
    podSelector:
        matchExpressions:
            - key: group__Gryffindor
              operator: DoesNotExist
    policyTypes:
        - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: 'src: (group = Dumbledore2) dst: (group != Slytherin and group != Gryffindor) conn: All Connections'
        nsx-id: "1928"
    creationTimestamp: null
    name: policy-7
    namespace: default
spec:
    ingress:
        - from:
            - podSelector:
                matchExpressions:
                    - key: group__Dumbledore2
                      operator: Exists
    podSelector:
        matchExpressions:
            - key: group__Slytherin
              operator: DoesNotExist
            - key: group__Gryffindor
              operator: DoesNotExist
    policyTypes:
        - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: Network Policy To Allow Access To DNS Server
        nsx-id: dns-rule-id
    creationTimestamp: null
    name: dns-policy
    namespace: default
spec:
    egress:
        - ports:
            - port: 53
              protocol: UDP
          to:
            - namespaceSelector: {}
              podSelector:
                matchLabels:
                    k8s-app: kube-dns
    podSelector: {}
    policyTypes:
        - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: Default Deny Network Policy
        nsx-id: "2144"
    creationTimestamp: null
    name: default-deny
    namespace: default
spec:
    podSelector: {}
    policyTypes:
        - Ingress
        - Egress
